--- a/portfolio.html
+++ b/portfolio.html
@@ -12,110 +12,138 @@
 </head>
 <body>
   <!-- Шапка сайта -->
-  <header>
-    <nav>
-      <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
-      <ul class="site-nav list">
-        <li><a href="./index.html" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-        <li><a href="#" class="link">Контакты</a></li>
-      </ul>
-    </nav>
-      <ul class="contact-nav list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
+  <header class="header section bottom-underline">
+    <div class="container">
+      <nav class="navigation">
+        <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
+        <ul class="site-nav list">
+          <li class="site-nav-item"><a href="./index.html" class="link">Студия</a></li>
+          <li class="site-nav-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li class="site-nav-item"><a href="#" class="link">Контакты</a></li>
+        </ul>
+      </nav>
+      <address class="address">
+        <ul class="contact-nav address-list list">
+          <li class="contact-nav-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="contact-nav-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </header>
   <main>
     <!-- Герой -->
     <section>
-      <h1 class="visually-hidden">Портфолио</h1>
-      <ul class="list nav-buttons">
-        <li><button type="button" class="button">Все</button></li>
-        <li><button type="button" class="button">Веб-сайты</button></li>
-        <li><button type="button" class="button">Приложения</button></li>
-        <li><button type="button" class="button">Дизайн</button></li>
-        <li><button type="button" class="button">Маркетинг</button></li>
-      </ul>
+      <div class ="container navigations">
+        <h1 class="visually-hidden">Портфолио</h1>
+        <ul class="list nav-buttons">
+          <li class="filter-item"><button type="button" class="button">Все</button></li>
+          <li class="filter-item"><button type="button" class="button">Веб-сайты</button></li>
+          <li class="filter-item"><button type="button" class="button">Приложения</button></li>
+          <li class="filter-item"><button type="button" class="button">Дизайн</button></li>
+          <li class="filter-item"><button type="button" class="button">Маркетинг</button></li>
+        </ul>
+      </div>
+      <div class="container projects">
       <ul class="projects-cards list">
-        <li >
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/technoHack.jpg" alt="Главная страница веб-сайта" width="370">
-            <h2 class="card-title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <div class="cards-text">
+              <h2 class="card-title">Технокряк</h2>
+              <p>Веб-сайт</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/NOvsGS.jpg" alt="Постер баскетбольного матча" width="370">
-            <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <div class="cards-text">
+              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/seafoodRest.jpg" alt="Лого ресторана" width="370">
-            <h2 class="card-title">Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <div class="cards-text">
+              <h2 class="card-title">Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/projectPrime.jpg" alt="Фотография Наушников" width="370">
-            <h2 class="card-title">Проект Prime</h2>
-            <p>Маркетинг</p>
+            <div class="cards-text">
+              <h2 class="card-title">Проект Prime</h2>
+              <p>Маркетинг</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/projectBoxes.jpg" alt="Фотография коробок" width="370">
-            <h2 class="card-title">Проект Boxes</h2>
-            <p>Приложение</p>
+            <div class="cards-text">
+              <h2 class="card-title">Проект Boxes</h2>
+              <p>Приложение</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/inspirationHasNoBorders.jpg" alt="Главная страница веб-сайта" width="370">
-            <h2 lang="en" class="card-title">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <div class="cards-text">
+              <h2 lang="en" class="card-title">Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/limitedEditionPublisher.jpg" alt="Фотография журнала" width="370">
-            <h2 class="card-title">Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <div class="cards-text">
+              <h2 class="card-title">Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/projectLAB.jpg" alt="Лого проекта LAB" width="370">
-            <h2 class="card-title">Проект LAB</h2>
-            <p>Маркетинг</p>
+            <div class="cards-text">
+              <h2 class="card-title">Проект LAB</h2>
+              <p>Маркетинг</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="cards-item">
           <a href="#" class="card link">
             <img src="./images/growingBusiness.jpg" alt="Главная страница веб-сайта" width="370">
-            <h2 lang="en" class="card-title">Growing Business</h2>
-            <p>Приложение</p>
+            <div class="cards-text">
+              <h2 lang="en" class="card-title">Growing Business</h2>
+              <p>Приложение</p>
+            </div>
           </a>
         </li>
       </ul>
+    </div>
     </section>
   </main>
   <!-- Футер -->
-  <footer>
-    <a href="./index.html" class="logo-footer link logo"><span class="logo-part">Web</span>Studio</a>
-    <address class="street-address">
+  <footer class="footer">
+    <div class="container">
+      <a href="./index.html" class="logo-footer link logo"><span class="logo-part">Web</span>Studio</a>
+      <address class="street-address">
       г. Киев, пр-т Леси Украинки, 26
-    </address>
-    <address>
-      <ul class="contact-address list">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-      </ul>
-    </address>
+      </address>
+      <address>
+        <ul class="contact-address list">
+          <li class="contact-address-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="contact-address-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </div>
   </footer>
 </body>
 </html>
