--- a/portfolio.html
+++ b/portfolio.html
@@ -12,122 +12,118 @@
 </head>
 <body>
   <!-- Шапка сайта -->
-  <header class="header section bottom-underline">
+  <header class="header bottom-underline">
     <div class="container">
-      <nav class="navigation">
-        <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
+      <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
+      <nav>
         <ul class="site-nav list">
-          <li class="site-nav-item"><a href="./index.html" class="link">Студия</a></li>
-          <li class="site-nav-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li class="site-nav-item"><a href="#" class="link">Контакты</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link link">Студия</a></li>
+          <li class="nav-item"><a href="./portfolio.html" class="nav-link link current">Портфолио</a></li>
+          <li class="nav-item"><a href="#" class="nav-link link">Контакты</a></li>
         </ul>
       </nav>
-      <address class="address">
-        <ul class="contact-nav address-list list">
-          <li class="contact-nav-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="contact-nav-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <ul class="contact-nav list">
+        <li class="nav-item"><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+        <li class="nav-item"><a href="tel:+380961111111" class="address-link link">+38 096 111 11 11</a></li>
+      </ul>
     </div>
   </header>
   <main>
     <!-- Герой -->
-    <section>
-      <div class ="container navigations">
+    <section class="portfolio">
+      <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
         <ul class="list nav-buttons">
-          <li class="filter-item"><button type="button" class="button">Все</button></li>
-          <li class="filter-item"><button type="button" class="button">Веб-сайты</button></li>
-          <li class="filter-item"><button type="button" class="button">Приложения</button></li>
-          <li class="filter-item"><button type="button" class="button">Дизайн</button></li>
-          <li class="filter-item"><button type="button" class="button">Маркетинг</button></li>
+          <li class="btn-item"><button type="button" class="button">Все</button></li>
+          <li class="btn-item"><button type="button" class="button">Веб-сайты</button></li>
+          <li class="btn-item"><button type="button" class="button">Приложения</button></li>
+          <li class="btn-item"><button type="button" class="button">Дизайн</button></li>
+          <li class="btn-item"><button type="button" class="button">Маркетинг</button></li>
+        </ul>
+        <ul class="projects-cards list">
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/technoHack.jpg" alt="Главная страница веб-сайта" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/NOvsGS.jpg" alt="Постер баскетбольного матча" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/seafoodRest.jpg" alt="Лого ресторана" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div> 
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/projectPrime.jpg" alt="Фотография Наушников" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/projectBoxes.jpg" alt="Фотография коробок" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/inspirationHasNoBorders.jpg" alt="Главная страница веб-сайта" width="370">
+              <div class="cards-text">
+                <h2 lang="en" class="card-title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/limitedEditionPublisher.jpg" alt="Фотография журнала" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/projectLAB.jpg" alt="Лого проекта LAB" width="370">
+              <div class="cards-text">
+                <h2 class="card-title">Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="project-item">
+            <a href="#" class="card link">
+              <img src="./images/growingBusiness.jpg" alt="Главная страница веб-сайта" width="370">
+              <div class="cards-text">
+                <h2 lang="en" class="card-title">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
+            </a>
+          </li>
         </ul>
       </div>
-      <div class="container projects">
-      <ul class="projects-cards list">
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/technoHack.jpg" alt="Главная страница веб-сайта" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Технокряк</h2>
-              <p>Веб-сайт</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/NOvsGS.jpg" alt="Постер баскетбольного матча" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/seafoodRest.jpg" alt="Лого ресторана" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Ресторан Seafood</h2>
-              <p>Приложение</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/projectPrime.jpg" alt="Фотография Наушников" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Проект Prime</h2>
-              <p>Маркетинг</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/projectBoxes.jpg" alt="Фотография коробок" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Проект Boxes</h2>
-              <p>Приложение</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/inspirationHasNoBorders.jpg" alt="Главная страница веб-сайта" width="370">
-            <div class="cards-text">
-              <h2 lang="en" class="card-title">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/limitedEditionPublisher.jpg" alt="Фотография журнала" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Издание Limited Edition</h2>
-              <p>Дизайн</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/projectLAB.jpg" alt="Лого проекта LAB" width="370">
-            <div class="cards-text">
-              <h2 class="card-title">Проект LAB</h2>
-              <p>Маркетинг</p>
-            </div>
-          </a>
-        </li>
-        <li class="cards-item">
-          <a href="#" class="card link">
-            <img src="./images/growingBusiness.jpg" alt="Главная страница веб-сайта" width="370">
-            <div class="cards-text">
-              <h2 lang="en" class="card-title">Growing Business</h2>
-              <p>Приложение</p>
-            </div>
-          </a>
-        </li>
-      </ul>
-    </div>
     </section>
   </main>
   <!-- Футер -->
@@ -135,12 +131,10 @@
     <div class="container">
       <a href="./index.html" class="logo-footer link logo"><span class="logo-part">Web</span>Studio</a>
       <address class="street-address">
-      г. Киев, пр-т Леси Украинки, 26
-      </address>
-      <address>
         <ul class="contact-address list">
-          <li class="contact-address-item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="contact-address-item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li class="str-address">г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="str-address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li class="str-address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </div>
