refactored small css mistakes

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <!-- Шапка сайта -->
   <header class="header">
     <div class="container">
-      <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
-      <nav>
+      <nav class="navigation">
+        <a href="./index.html" class="link logo"><span class="logo-part">Web</span>Studio</a>
         <ul class="site-nav list">
           <li class="nav-item"><a href="./index.html" class="nav-link link current">Студия</a></li>
           <li class="nav-item"><a href="./portfolio.html" class="nav-link link">Портфолио</a></li>
@@ -107,8 +107,8 @@
     <div class="container">
       <a href="./index.html" class="logo-footer link logo"><span class="logo-part">Web</span>Studio</a>
       <address class="street-address">
+        <p class="str-address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="contact-address list">
-          <li class="str-address">г. Киев, пр-т Леси Украинки, 26</li>
           <li class="str-address"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
           <li class="str-address"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
